--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="login_title">Log In</string>
     <string name="user">Username</string>
     <string name="passw">Password</string>
-
+    //mapbox
+    <string name="acces_token">pk.eyJ1IjoiZm91YWQ5OSIsImEiOiJjazhpY2Y0NXowMWFiM25tanhoYmg1dDRtIn0.Z_D1fDk9iTzxbHKlvKwqDw</string>
     <!-- Sign Up activities -->
     <string name="signup_title">Sign Up</string>
     <string name="e_mail">E-Mail</string>
@@ -121,4 +122,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
