--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="rookie">Rookie</string>
     <string name="pro">Pro</string>
     <string name="option1_obj">Lose weight</string>
-    <string name="option2_obj">Stay in shape</string>
+    <string name="option2_obj">Cardio/Tonify</string>
     <string name="option3_obj">Gain Strenght</string>
     <string name="option4_obj">Muslce volume</string>
 
