--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,10 +49,10 @@
     <string name="skill_form">Skill</string>
     <string name="rookie">Rookie</string>
     <string name="pro">Pro</string>
-    <string name="option1_obj">Lose weight</string>
+    <string name="option1_obj">Lose Weight</string>
     <string name="option2_obj">Cardio/Tonify</string>
     <string name="option3_obj">Gain Strenght</string>
-    <string name="option4_obj">Muslce volume</string>
+    <string name="option4_obj">Muslce Volume</string>
 
     <!-- Diet home activity -->
     <string name="diet_title_home">Diets</string>
