--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,7 @@
     <string name="setting3">Support</string>
     <string name="setting4">FAQ</string>
     <string name="setting5">Sign Out :(</string>
+    <string name="setting6">Change Diet</string>
 
     <!-- Other strings -->
     <string name="app_name">HealthCared</string>
