--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,13 +79,17 @@
     <string name="personal_info_title">Personal information</string>
     <string name="personal_settings1">Update Weight</string>
     <string name="personal_settings2">Update Height</string>
+    <string name="dieta">Update Diet</string>
+    <string name="dieta_normal">Normal Diet</string>
+    <string name="dieta_veggie">Vegetarian Diet</string>
+    <string name="dieta_vegan">Vegan Diet</string>
     <string name="settings_button">Settings</string>
+    <string name="password">New Password</string>
+    <string name="uppass">Update Password</string>
 
     <!-- Settings activity -->
     <string name="settings_title">Settings</string>
     <string name="Appsettings_title">App Settings</string>
-    <string name="setting1">Change Username</string>
-    <string name="setting2">Change Password</string>
     <string name="setting3">Support</string>
     <string name="setting4">FAQ</string>
     <string name="setting5">Sign Out :(</string>
