--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="option1_obj">Lose Weight</string>
     <string name="option2_obj">Cardio/Tonify</string>
     <string name="option3_obj">Gain Strenght</string>
-    <string name="option4_obj">Muslce Volume</string>
+    <string name="option4_obj">Bulk</string>
 
     <!-- Diet home activity -->
     <string name="diet_title_home">Diets</string>
