--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="full_name">Full Name</string>
     <string name="repeat_psw">Repeat Password</string>
     <string name="terms"><u>Terms of Use &amp; Privacy Policy</u></string>
-    <string name="birth">Your Daily Step Goal</string>
+    <string name="birth">Your Step Goal</string>
     <string name="weight">Weight (kg)</string>
     <string name="height">Height (cm)</string>
 
@@ -88,6 +88,7 @@
     <string name="settings_button">Settings</string>
     <string name="password">New Password</string>
     <string name="uppass">Update Password</string>
+    <string name="save">Save</string>
 
     <!-- Settings activity -->
     <string name="settings_title">Settings</string>
